<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.ItineraryActivity">



  <com.sothree.slidinguppanel.SlidingUpPanelLayout
      xmlns:sothree="http://schemas.android.com/apk/res-auto"
      android:id="@+id/sliding_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="bottom"
      android:background="#FDF6EC"
      sothree:umanoPanelHeight="68dp"
      sothree:umanoShadowHeight="0dp">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="99dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slidingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        >

      <com.google.android.material.switchmaterial.SwitchMaterial
          android:id="@+id/toggleTransit"
          android:layout_width="130dp"
          android:layout_height="41dp"
          android:background="@drawable/round"
          android:backgroundTint="#11CA9D"
          android:elevation="0dp"
          android:fontFamily="@font/ruda"
          android:foreground="?attr/selectableItemBackground"
          android:stateListAnimator="@null"
          android:text="   Transit"
          android:textColor="#FFFFFF"
          android:textSize="18sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.907"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/redirect"
          app:layout_constraintVertical_bias="0.045" />

      <TextView
          android:id="@+id/itinerary"
          android:layout_width="wrap_content"
          android:layout_height="45dp"
          android:layout_marginTop="0dp"
          android:fontFamily="@font/rubikone"
          android:text="Itinerary"
          android:textColor="#11CA9D"
          android:textSize="35sp"
          app:layout_constraintBottom_toTopOf="@+id/homeButton"
          app:layout_constraintEnd_toStartOf="@+id/redirect"
          app:layout_constraintHorizontal_bias="0.152"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.025" />


      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/redirect"
          android:layout_width="80dp"
          android:layout_height="40dp"
          android:layout_marginTop="0dp"
          android:background="@drawable/round"
          android:backgroundTint="#FFD159"
          android:elevation="0dp"
          android:fontFamily="@font/ruda"
          android:foreground="?attr/selectableItemBackground"
          android:stateListAnimator="@null"
          android:text="MAP"
          android:textColor="#000000"
          android:textSize="20sp"
          app:layout_constraintBottom_toTopOf="@+id/homeButton"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toEndOf="@+id/itinerary"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.032" />

      <TextView
          android:id="@+id/day"
          android:layout_width="wrap_content"
          android:layout_height="38dp"
          android:fontFamily="@font/ruda"
          android:text="Day 1"
          android:textColor="#000000"
          android:textSize="25sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.205"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/itinerary"
          app:layout_constraintVertical_bias="0.036" />


      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/homeButton"
          android:layout_width="130dp"
          android:layout_height="41dp"
          android:background="@drawable/round"
          android:backgroundTint="#11CA9D"
          android:elevation="0dp"
          android:fontFamily="@font/ruda"
          android:foreground="?attr/selectableItemBackground"
          android:stateListAnimator="@null"
          android:text="HOME"
          android:textColor="#FFFFFF"
          android:textSize="27sp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/estimatedRouteTime"
          app:layout_constraintVertical_bias="0.5"
          />

<!--      <androidx.appcompat.widget.AppCompatButton-->
<!--          android:id="@+id/saveButton"-->
<!--          android:layout_width="130dp"-->
<!--          android:layout_height="41dp"-->
<!--          android:background="@drawable/round"-->
<!--          android:backgroundTint="#11CA9D"-->
<!--          android:elevation="0dp"-->
<!--          android:fontFamily="@font/ruda"-->
<!--          android:foreground="?attr/selectableItemBackground"-->
<!--          android:stateListAnimator="@null"-->
<!--          android:text="SAVE"-->
<!--          android:textColor="#FFFFFF"-->
<!--          android:textSize="27sp"-->
<!--          app:layout_constraintBottom_toBottomOf="parent"-->
<!--          app:layout_constraintEnd_toEndOf="parent"-->
<!--          app:layout_constraintHorizontal_bias="0.836"-->
<!--          app:layout_constraintStart_toStartOf="parent"-->
<!--          app:layout_constraintTop_toBottomOf="@+id/redirect"-->
<!--          app:layout_constraintVertical_bias="0.936" />-->

      <ListView
          android:id="@+id/itineraryList"
          android:layout_width="359dp"
          android:layout_height="355dp"
          app:layout_constraintBottom_toTopOf="@+id/homeButton"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/day"
          app:layout_constraintVertical_bias="0.287">

      </ListView>

      <TextView
          android:id="@+id/back"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:text=""
          android:textColor="#000000"
          android:textSize="25sp"
          app:layout_constraintBottom_toTopOf="@+id/itineraryList"
          app:layout_constraintEnd_toStartOf="@+id/day"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.798" />

      <TextView
          android:id="@+id/forward"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:text="→"
          android:textColor="#000000"
          android:textSize="25sp"
          app:layout_constraintBottom_toTopOf="@+id/itineraryList"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.088"
          app:layout_constraintStart_toEndOf="@+id/day"
          app:layout_constraintTop_toBottomOf="@+id/itinerary"
          app:layout_constraintVertical_bias="0.411" />

      <TextView
          android:id="@+id/estimatedRouteTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/ruda"
          android:text="estimated route time:"
          android:textColor="#000000"
          android:textSize="18dp"
          app:layout_constraintBottom_toTopOf="@+id/homeButton"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.497"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/itineraryList"
          app:layout_constraintVertical_bias="0.42" />


</androidx.constraintlayout.widget.ConstraintLayout>


  </com.sothree.slidinguppanel.SlidingUpPanelLayout>


</androidx.constraintlayout.widget.ConstraintLayout>