<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF6EC"
    tools:context=".planning.LocationsActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="197dp"
        android:layout_height="48dp"
        android:background="@drawable/round"
        android:backgroundTint="#11CA9D"
        android:elevation="0dp"
        android:fontFamily="@font/ruda"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@null"
        android:text="NEXT"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationList"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tourType"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:fontFamily="@font/rubikone"
        android:text="Tour Type"
        android:textAlignment="center"
        android:textColor="#11CA9D"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="283dp"
        android:layout_height="21dp"
        android:fontFamily="@font/rubikone"
        android:text="Select locations to visit"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186" />

    <ListView
        android:id="@+id/locationList"
        android:layout_width="344dp"
        android:layout_height="403dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        app:layout_constraintVertical_bias="0.781">

    </ListView>

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="66dp"
        android:layout_height="43dp"
        android:layout_marginEnd="318dp"
        app:layout_constraintBottom_toTopOf="@+id/tourType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/arrow" />



</androidx.constraintlayout.widget.ConstraintLayout>