<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF6EC"
    tools:context=".planning.DurationActivity">


    <TextView
        android:id="@+id/plusButton"
        android:layout_width="77dp"
        android:layout_height="71dp"
        android:layout_marginTop="292dp"
        android:layout_marginBottom="359dp"
        android:backgroundTint="#FDF6EC"
        android:fontFamily="@font/ruda"
        android:text="&#65291;"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/day"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtractButton"
        android:layout_width="77dp"
        android:layout_height="71dp"
        android:layout_marginTop="292dp"
        android:layout_marginBottom="359dp"
        android:backgroundTint="#FDF6EC"
        android:fontFamily="@font/ruda"
        android:text="─"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/day"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reviewItineraryButton"
        android:layout_width="191dp"
        android:layout_height="95dp"
        android:background="@drawable/round"
        android:backgroundTint="#11CA9D"
        android:elevation="0dp"
        android:fontFamily="@font/ruda"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@null"
        android:text="CREATE TOUR"
        android:textColor="#FFFFFF"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day"
        app:layout_constraintVertical_bias="0.788" />

    <TextView
        android:id="@+id/tourType"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/rubikone"
        android:text="Tour Type"
        android:textAlignment="center"
        android:textColor="#11CA9D"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="66dp"
        android:layout_height="43dp"
        android:layout_marginEnd="318dp"
        app:layout_constraintBottom_toTopOf="@+id/tourType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="285dp"
        android:layout_height="36dp"
        android:fontFamily="@font/rubikone"
        android:text="Select duration for tour"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tourType"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/day"
        android:layout_width="221dp"
        android:layout_height="93dp"
        android:layout_marginTop="292dp"
        android:layout_marginBottom="346dp"
        android:fontFamily="@font/ruda"
        android:text="1 DAY"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subtractButton"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>