...
        android:layout_height="104dp"
        android:fontFamily="@font/rubikone"
        android:text="Ready to get started?"
        android:textAlignment="center"
        android:textColor="#11CA9D"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/uscButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

...
